--- a/words.html
+++ b/words.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        summary{font-size: 1.25rem}
+        body{font-size: 1.1rem}
         ul{margin-top:0px}
         details{margin: 10px 0}
         </style>
@@ -14,7 +14,7 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">home</a></p>
+            <p><a href="/website/">home</a></p>
             <ul>
                 <li><a href="/website/about">about</a></li>
                 <li><a href="/website/musicians">musicians</a></li>
