--- a/words/diary.html
+++ b/words/diary.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head><title>diary</title>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"><style>
-    @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap');
     body{
         margin: 0px;
         background-color: #202020;
         width: 100vw;
         color: #d0d0d0;
-        font-family: 'Archivo', sans-serif;
+        font-family: 'Work Sans', sans-serif;
         font-size: 1.5rem; line-height: 1.4}
         a{color: #d0d0d0; text-decoration-thickness: 2px}
     </style></head>
@@ -135,7 +134,7 @@
             <br>(kisses diary)
             <br>(goes to bed)
             <br>
-            <br><span style="font-family: 'Libre Baskerville', serif">(Author looks at work with a strange face)</span>
+            <br><i>(Author looks at work with a strange face)</i>
             <br>
             <br><a href="/website/words">back to words</a></p>
 </body>
