--- a/words/tomo-ni.html
+++ b/words/tomo-ni.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: tomo ni</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         </style>
     </head>
 
@@ -27,7 +27,8 @@
     <h1>tomo ni</h1>
     
         <details class="navbar">
-            <summary><a href="/website/words">back to poems</a></summary>
+            <summary>back</summary>
+            <a hfer="/website/words">poems</a><br>
             <a href="vento">vento</a> . 
             <a href="sona-pini">sona pini</a> . 
             <a href="ona">ona</a> . 
