--- a/words/tomo-pi-esun-lipu.html
+++ b/words/tomo-pi-esun-lipu.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: tomo pi esun lipu</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .sidebar div{margin: 24px}
             @media only screen and (max-width: 800px) {
             body{display: inline-block;
@@ -38,7 +38,8 @@
     <h1>tomo pi esun lipu</h1>
     
         <details class="navbar">
-            <summary><a href="/website/words">back to longer texts</a></summary>
+            <summary>back</summary>
+            <a hfer="/website/words">longer texts</a><br>
             <a href="len-pi-laso-telo">len pi laso telo</a> . 
             <b>tomo pi esun lipu</b>
         </details>
