--- a/words/concreto.html
+++ b/words/concreto.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: concreto</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+            body{font-size: 1.1rem}
         </style>
     </head>
 
