--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><a href="about"     title="me and what i like to do"            >about</a></li>
                 <li><a href="musicians" title="good music people"                   >musicians</a></li>
                 <li><a href="websites"  title="cool websites"       class="websites">websites</a></li>
-                <li><a href="words"     title="poems and texts and things"          ><s>words</s></a></li>
+                <li><a href="words"     title="poems and texts and things"          >words</a></li>
                 <li><a href="doodles"   title="stuff i drew"                        ><s>doodles</s></a></li>
                 <li><a href="blender"   title="3d renders in blender"               ><s>blender</s></a></li>
                 <li><a href="misc"      title="general miscellanea" class="misc"    ><s>misc</s></a></li>
