--- a/doodles.html
+++ b/doodles.html
@@ -1,35 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
-        <title>{doodles}</title>
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
+        <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{background-image:url(doodles/background.jpg);
-            background-repeat:no-repeat;
-            background-size:cover;
-            color: #101010;
-            font-family: 'Literata', serif;}
-        .c, .m, .y{background-color: #f0f0f0; width: 29%; margin-top: 10px}
-        .c:hover{background-color: #003351;}
-        .m:hover{background-color: #640c25;}
-        .y:hover{background-color: #806014;}
-        .main{padding-top: 20px}
-        h1{font-size: min(10vw, 3rem); font-style: italic;}
-        h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
-        h2::before{content: "- "; color: #5d5e6c;}
-        a{color: #101010; text-decoration-color:#5d5e6c; text-decoration-thickness: 2px;}
-        a:hover{text-decoration-color:#101010; background-color: #101010; color: #d4d4d4}
-        a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
-        .sidebar{background-color: #d4d4d4;
-            box-shadow: #40404040 4px 0 4px}
-        @media only screen and (max-width: 600px) {
-            body{background-color: #d4d4d4;
-            background-image:none}
-            .main{background-image:url(doodles/background.jpg);
-            box-shadow: #40404080 0 0 8px}
-        }
-        </style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
     </head>
 
     <body>
@@ -50,10 +25,11 @@
         </div>
         <div class="main">
             
-        <img src="doodles/doodles.gif" alt="{doodles}" style="width: 60%"><br>
+        <h1>doodles</h1>
     
         <details class="navbar">
-            <summary><a href="/website/home">home</a></summary>
+            <summary>back</summary>
+            <a href="/website/">home</a><br>
             <a href="/website/about">about</a> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
