--- a/misc/folder.html
+++ b/misc/folder.html
@@ -38,7 +38,7 @@
             <b><i>folder</i></b><br>
         </details>
 
-        <p>You open the folder.</p>
+        <p>You open the folder to find... more folders.</p>
     <details class="folder">
         <summary><a>index(es)</a></summary>
         <ul>
