--- a/newindex.html
+++ b/newindex.html
@@ -3,13 +3,25 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular.</title>
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all"><style>
+            #statuscafe {
+                padding: .5em}
+            #statuscafe-username {
+                margin-bottom: .5em;}
+            #statuscafe-content {
+                margin: 0 1em 0.5em 1em;}
+        </style>
+    </head>
 
     <body>
             <h1>nowhere in particular.</h1>
             <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
                 I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
                 Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it, however small this site may be.</p>
+
+            <details><summary>latest status</summary>
+            <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
+            </details>
 
     </body>
 </html>
