--- a/newindex.html
+++ b/newindex.html
@@ -5,7 +5,6 @@
         <title>nowhere in particular.</title>
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all"><style>
             #statuscafe {padding-left: 1rem}
-            #statuscafe-username a{color: #d01010}
             #statuscafe-username a:hover{color: #f0f0f0; background-color: #d01010; text-decoration-color: #d01010;}
         </style>
     </head>
@@ -19,6 +18,25 @@
             <details><summary><b>latest status</b></summary>
             <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
             </details>
+
+            <p>stuff i am/like</p>
+            <ul>
+                <a>about</a>
+                <a>musicians</a>
+                <a>websites</a>
+            </ul>
+            <p>stuff i make</p>
+            <ul>
+                <a>words</a>
+                <a>doodles</a>
+                <a>blender</a>
+                <a>misc</a>
+            </ul>
+            <p>other stuff</p>
+            <ul>
+                <a>buttons</a>
+                <a>sitelog</a>
+            </ul>
 
     </body>
 </html>
