--- a/newindex.html
+++ b/newindex.html
@@ -21,20 +21,20 @@
 
             <p>stuff i am/like</p>
             <ul>
-                <a>about</a>
-                <a>musicians</a>
+                <a>about</a><br>
+                <a>musicians</a><br>
                 <a>websites</a>
             </ul>
             <p>stuff i make</p>
             <ul>
-                <a>words</a>
-                <a>doodles</a>
-                <a>blender</a>
+                <a>words</a><br>
+                <a>doodles</a><br>
+                <a>blender</a><br>
                 <a>misc</a>
             </ul>
             <p>other stuff</p>
             <ul>
-                <a>buttons</a>
+                <a>buttons</a><br>
                 <a>sitelog</a>
             </ul>
 
