--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
             h1{font-size: min(6.5vw, 2.9rem); margin: 8px 0 16px}
 
-            .info{padding: 16px; padding-left: 24px; width: 400px}
-            .summary{padding: 16px 24px; margin-left: 24px; width: 360px; font-size: 2rem;
+            .info{padding: 16px; padding-left: 24px; width: 400px;
                 border-right: solid #a0a0a0 2px; margin-right: 12px}
+            .summary{padding: 16px 24px; margin-left: 24px; width: 360px; font-size: 2rem}
 
             .summary a{text-decoration: none}
 
