added background back

--- a/doodles.html
+++ b/doodles.html
@@ -4,7 +4,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+            .body{background-image: url('/doodles/background.jpg');
+        background-repeat: repeat;}
+        </style>
     </head>
 
     <body>
@@ -25,7 +28,7 @@
         </div>
         <div class="main">
             
-        <h1>doodles</h1>
+        <img src="/doodles/doodles.gif" alt="{doodles}">
     
         <details class="navbar">
             <summary>back</summary>
