--- a/doodles.html
+++ b/doodles.html
@@ -5,7 +5,7 @@
         <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .body{background-image: url('/doodles/background.jpg');
+            body{background-image: url('/website/doodles/background.jpg');
         background-repeat: repeat;}
         </style>
     </head>
@@ -19,7 +19,7 @@
                 <li><a href="/website/musicians">musicians</a></li>
                 <li><a href="/website/websites">websites</a></li>
                 <li><a href="/website/words">words</a></li>
-                <li><b><i>doodles</i></b></li>
+                <li><b>doodles</b></li>
                 <li><a href="/website/blender">blender</a></li>
                 <li><a href="/website/misc">misc</a></li>
                 <li><a href="/website/buttons">buttons</a></li>
@@ -28,7 +28,7 @@
         </div>
         <div class="main">
             
-        <img src="/doodles/doodles.gif" alt="{doodles}">
+        <img src="/website/doodles/doodles.gif" alt="{doodles}">
     
         <details class="navbar">
             <summary>back</summary>
@@ -37,14 +37,14 @@
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
             <a href="/website/words">words</a> . 
-            <b><i>doodles</i></b> . 
+            <b>doodles</b> . 
             <a href="/website/blender">blender</a> . 
             <a href="/website/misc">misc</a><br>
             <a href="/website/buttons">buttons</a> . 
             <a href="/website/sitelog">sitelog</a>
         </details>
 
-        <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
+        <p>this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
         <a href="doodles/people" class="button"><img src="doodles/people.gif" alt="people button"                    style="border: solid #05a1fc min(5px, 0.75vw)" class="c"></a>
         <a href="doodles/ruler_and_compass" class="button"><img src="doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c min(5px, 0.75vw)" class="m"></a>
         <a href="doodles/etc" class="button"><img src="doodles/etc.gif" alt="etc button"                             style="border: solid #ffb400 min(5px, 0.75vw)" class="y"></a>
