--- a/doodles.html
+++ b/doodles.html
@@ -5,8 +5,7 @@
         <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            body{background-image: url('/website/doodles/background.jpg');
-        background-repeat: repeat;}
+            body{color: #e0e0e0}
         </style>
     </head>
 
@@ -28,7 +27,7 @@
         </div>
         <div class="main">
             
-        <img src="/website/doodles/doodles.gif" alt="{doodles}">
+        <img src="/website/doodles/doodles.gif" alt="{doodles}" style="height: min(8vw, 3rem)">
     
         <details class="navbar">
             <summary>back</summary>
