--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -50,7 +50,7 @@
         </div>
         <div class="main">
             
-            <img src="etcheader.gif" alt="etc" style="max-width: 60%" class="header"><br>
+            <img src="etcheader.gif" alt="{etc}" style="height: min(8vw, 3rem)"><br>
     
         <details class="navbar">
             <summary><a href="/website/doodles">back to doodles</a></summary>
