--- a/doodles/people.html
+++ b/doodles/people.html
@@ -50,7 +50,7 @@
         </div>
         <div class="main">
             
-            <img src="peopleheader.gif" alt="people" style="width: 60%" class="header"><br><br>
+            <img src="peopleheader.gif" alt="{people}" style="height: min(8vw, 3rem)"><br><br>
     
         <details class="navbar">
             <summary><a href="/website/doodles">back to doodles</a></summary>
