--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -50,7 +50,7 @@
         </div>
         <div class="main">
             
-            <img src="/website/doodles/racheader.gif" alt="ruler and compass" style="max-width: 382px; width: 100%" class="header"><br>
+            <img src="/website/doodles/racheader.gif" alt="{ruler and compass}" style="height: min(8vw, 3rem)"><br>
     
         <details class="navbar">
             <summary><a href="/website/doodles">back to doodles</a></summary>
