--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -5,12 +5,7 @@
         <title>{etc}</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{background-image:url(background.jpg);
-            background-repeat:no-repeat;
-            background-size:cover;
-            background-attachment: fixed;
-            color: #101010;
-            font-family: 'Literata', serif;}
+        body{background-color: #d0d0d0}
         .main{padding-top: 20px}
         h1{font-size: min(10vw, 3rem); font-style: italic;}
         h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
