--- a/doodles.html
+++ b/doodles.html
@@ -5,7 +5,7 @@
         <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            body{background-color: #e0e0e0}
+            body{background-color: #d0d0d0}
         </style>
     </head>
 
