--- a/doodles.html
+++ b/doodles.html
@@ -44,9 +44,9 @@
         </details>
 
         <p>this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <a href="doodles/people"><img src="doodles/people.gif" alt="people button"> people</a>
-        <a href="doodles/ruler_and_compass"><img src="doodles/rac.gif" alt="ruler and compass button"> ruler and compass</a>
-        <a href="doodles/etc"><img src="doodles/etc.gif" alt="etc button"> etc</a>
+        <a href="doodles/people"><img src="doodles/people.gif" alt="people button"                   > <h2>people</h2></a>
+        <a href="doodles/ruler_and_compass"><img src="doodles/rac.gif" alt="ruler and compass button"> <h2>ruler and compass</h2></a>
+        <a href="doodles/etc"><img src="doodles/etc.gif" alt="etc button"                            > <h2>etc</h2></a>
         </div>
     </body>
 </html>
