--- a/doodles.html
+++ b/doodles.html
@@ -6,6 +6,9 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{background-color: #d0d0d0}
+            .list a{display: flex; width: fit-content; padding-right: 8px;
+            align-items: ceter};
+            .list img{size: 60px 60px}
         </style>
     </head>
 
