--- a/doodles.html
+++ b/doodles.html
@@ -6,9 +6,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{background-color: #d0d0d0}
-            .list a{display: flex; width: fit-content; padding-right: 8px;
-            align-items: ceter};
-            .list img{size: 60px 60px}
+            .list img:hover{background-color: #101010;}
         </style>
     </head>
 
@@ -48,9 +46,9 @@
 
         <p>this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
         <div class="list">
-        <a href="doodles/people"><img src="doodles/people.gif" alt="people button"                   ><h2 style="display: inline">people</h2></a><br>
-        <a href="doodles/ruler_and_compass"><img src="doodles/rac.gif" alt="ruler and compass button"><h2 style="display: inline">ruler and compass</h2></a><br>
-        <a href="doodles/etc"><img src="doodles/etc.gif" alt="etc button"                            ><h2 style="display: inline">etc</h2></a>
+        <a href="doodles/people"><img src="doodles/people.gif" alt="people button"                   ><h2 style="display: inline"></a>
+        <a href="doodles/ruler_and_compass"><img src="doodles/rac.gif" alt="ruler and compass button"><h2 style="display: inline"></a>
+        <a href="doodles/etc"><img src="doodles/etc.gif" alt="etc button"                            ><h2 style="display: inline"></a>
         </div>
         </div>
     </body>
