--- a/doodles.html
+++ b/doodles.html
@@ -46,9 +46,9 @@
 
         <p>this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
         <div class="list">
-        <a href="doodles/people"><img src="doodles/people.gif" alt="people button"                   ><h2 style="display: inline"></a>
-        <a href="doodles/ruler_and_compass"><img src="doodles/rac.gif" alt="ruler and compass button"><h2 style="display: inline"></a>
-        <a href="doodles/etc"><img src="doodles/etc.gif" alt="etc button"                            ><h2 style="display: inline"></a>
+        <a href="doodles/people"><img src="doodles/people.gif" alt="people button"></a>
+        <a href="doodles/ruler_and_compass"><img src="doodles/rac.gif" alt="ruler and compass button"></a>
+        <a href="doodles/etc"><img src="doodles/etc.gif" alt="etc button"></a>
         </div>
         </div>
     </body>
