--- a/doodles.html
+++ b/doodles.html
@@ -6,7 +6,8 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{background-color: #d0d0d0}
-            .list img:hover{background-color: #101010;}
+            .list img:hover{background-color: #101010}
+            .list a:hover{background-color: #0000}
         </style>
     </head>
 
@@ -46,9 +47,9 @@
 
         <p>this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
         <div class="list">
-        <a href="doodles/people"><img src="doodles/people.gif" alt="people button"></a>
-        <a href="doodles/ruler_and_compass"><img src="doodles/rac.gif" alt="ruler and compass button"></a>
-        <a href="doodles/etc"><img src="doodles/etc.gif" alt="etc button"></a>
+        <a href="doodles/people"><img            style="border: solid #05a1fc 2px" src="doodles/people.gif" alt="people button"></a>
+        <a href="doodles/ruler_and_compass"><img style="border: solid #fc074c 2px" src="doodles/rac.gif" alt="ruler and compass button"></a>
+        <a href="doodles/etc"><img               style="border: solid #ffb400 2px" src="doodles/etc.gif" alt="etc button"></a>
         </div>
         </div>
     </body>
