--- a/doodles.html
+++ b/doodles.html
@@ -5,6 +5,7 @@
         <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        body{background-color:  #d0d0d0;}
 
         .c, .m, .y{background-color: #f0f0f0; width: 29%; margin-top: 10px}
         .c:hover{background-color: #003351;}
@@ -29,7 +30,7 @@
                 <li><a href="/website/musicians">musicians</a></li>
                 <li><a href="/website/websites">websites</a></li>
                 <li><a href="/website/words">words</a></li>
-                <li><b><i>doodles</i></b></li>
+                <li><b>doodles</b></li>
                 <li><a href="/website/blender">blender</a></li>
                 <li><a href="/website/misc">misc</a></li>
                 <li><a href="/website/buttons">buttons</a></li>
@@ -38,7 +39,7 @@
         </div>
         <div class="main">
             
-        <h1>doodles</h1>
+        <img src="/website/doodles/doodles.gif" alt="{doodles}" style="height: min(20vw, 5.5rem)">
     
         <details class="navbar">
             <summary>back</summary>
@@ -47,7 +48,7 @@
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
             <a href="/website/words">words</a> . 
-            <b><i>doodles</i></b> . 
+            <b>doodles</b> . 
             <a href="/website/blender">blender</a> . 
             <a href="/website/misc">misc</a><br>
             <a href="/website/buttons">buttons</a> . 
