--- a/doodles.html
+++ b/doodles.html
@@ -56,9 +56,9 @@
         </details>
 
         <p>this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <a href="doodles/people" class="button"><img src="doodles/people.gif" alt="people button"                    style="border: solid #05a1fc min(5px, 0.75vw)" class="c"></a>
-        <a href="doodles/ruler_and_compass" class="button"><img src="doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c min(5px, 0.75vw)" class="m"></a>
-        <a href="doodles/etc" class="button"><img src="doodles/etc.gif" alt="etc button"                             style="border: solid #ffb400 min(5px, 0.75vw)" class="y"></a>
+        <a href="doodles/people" class="button"><img src="doodles/people.gif" alt="people button"                    style="border: solid #037abf min(4px, 0.75vw)" class="c"></a>
+        <a href="doodles/ruler_and_compass" class="button"><img src="doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c min(4px, 0.75vw)" class="m"></a>
+        <a href="doodles/etc" class="button"><img src="doodles/etc.gif" alt="etc button"                             style="border: solid #eb8d00 min(4px, 0.75vw)" class="y"></a>
         </div>
         </div>
     </body>
