--- a/doodles.html
+++ b/doodles.html
@@ -11,12 +11,6 @@
         .c:hover{background-color: #003351;}
         .m:hover{background-color: #640c25;}
         .y:hover{background-color: #806014;}
-        .main{padding-top: 20px}
-        h1{font-size: min(10vw, 3rem); font-style: italic;}
-        h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
-        h2::before{content: "- "; color: #5d5e6c;}
-        a{color: #101010; text-decoration-color:#5d5e6c; text-decoration-thickness: 2px;}
-        a:hover{text-decoration-color:#101010; background-color: #101010; color: #d4d4d4}
         a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
         </style>
     </head>
@@ -56,9 +50,9 @@
         </details>
 
         <p>this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <a href="doodles/people" class="button"><img src="doodles/people.gif" alt="people button"                    style="border: solid #037abf min(4px, 0.75vw)" class="c"></a>
+        <a href="doodles/people" class="button"><img src="doodles/people.gif" alt="people button"                    style="border: solid #05a1fc min(4px, 0.75vw)" class="c"></a>
         <a href="doodles/ruler_and_compass" class="button"><img src="doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c min(4px, 0.75vw)" class="m"></a>
-        <a href="doodles/etc" class="button"><img src="doodles/etc.gif" alt="etc button"                             style="border: solid #eb8d00 min(4px, 0.75vw)" class="y"></a>
+        <a href="doodles/etc" class="button"><img src="doodles/etc.gif" alt="etc button"                             style="border: solid #ffb400 min(4px, 0.75vw)" class="y"></a>
         </div>
         </div>
     </body>
