--- a/doodles.html
+++ b/doodles.html
@@ -5,7 +5,10 @@
         <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{background-color:  #d0d0d0;}
+        body{background-image: url('/doodles/background.jpg');
+        background-repeat: no-repeat; background-attachment: fixed;}
+
+        .sidebar{background-color: #f0f0f0;}
 
         .c, .m, .y{background-color: #f0f0f0; width: 29%; margin-top: 10px}
         .c:hover{background-color: #003351;}
