--- a/doodles.html
+++ b/doodles.html
@@ -8,7 +8,8 @@
         body{background-image: url('/doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;}
 
-        .sidebar{background-color: #f0f0f0;}
+        .sidebar{background-color: #f0f0f0}
+        .sidebar, .navbar{border-color: #101010;}
 
         .c, .m, .y{background-color: #f0f0f0; width: 29%; margin-top: 10px}
         .c:hover{background-color: #003351;}
