--- a/doodles.html
+++ b/doodles.html
@@ -5,7 +5,7 @@
         <title>doodles</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{background-image: url('/doodles/background.jpg');
+        body{background-image: url('doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;}
 
         .sidebar{background-color: #f0f0f0}
