--- a/doodles.html
+++ b/doodles.html
@@ -8,7 +8,7 @@
         body{background-image: url('doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;}
 
-        .sidebar{background-color: #f0f0f0}
+        .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
 
         .c, .m, .y{background-color: #f0f0f0; width: 29%; margin-top: 10px}
@@ -28,7 +28,7 @@
                 <li><a href="/website/musicians">musicians</a></li>
                 <li><a href="/website/websites">websites</a></li>
                 <li><a href="/website/words">words</a></li>
-                <li><b>doodles</b></li>
+                <li><b><i>doodles</i></b></li>
                 <li><a href="/website/blender">blender</a></li>
                 <li><a href="/website/misc">misc</a></li>
                 <li><a href="/website/buttons">buttons</a></li>
@@ -46,7 +46,7 @@
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
             <a href="/website/words">words</a> . 
-            <b>doodles</b> . 
+            <b><i>doodles</i></b> . 
             <a href="/website/blender">blender</a> . 
             <a href="/website/misc">misc</a><br>
             <a href="/website/buttons">buttons</a> . 
