--- a/doodles/people.html
+++ b/doodles/people.html
@@ -5,36 +5,19 @@
         <title>{people}</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{background-image:url(background.jpg);
-            background-repeat:no-repeat;
-            background-size:cover;
-            background-attachment: fixed;
-            color: #101010;
-            font-family: 'Literata', serif;}
-        .main{padding-top: 20px}
-        h1{font-size: min(10vw, 3rem); font-style: italic;}
-        h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
-        h2::before{content: "- "; color: #5d5e6c;}
-        a{color: #101010; text-decoration-color:#5d5e6c; text-decoration-thickness: 2px;}
-        a:hover{text-decoration-color:#101010; background-color: #101010; color: #d4d4d4}
-        a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
-        .sidebar{background-color: #d4d4d4;
-            box-shadow: #40404040 4px 0 4px}
-        .sidebar div{margin: 24px}
-        img{border: solid #080808 min(3px, 0.6vw)}
+        body{background-image: url('doodles/background.jpg');
+        background-repeat: no-repeat; background-attachment: fixed;}
+
+        .sidebar{background-color: #d0d0d0}
+        .sidebar, .navbar{border-color: #101010;}
+
+        drawings.img{border: solid #080808 min(3px, 0.6vw)}
         .header{border: solid 0px}
         #drawings{line-height:0; column-count: 1; column-gap: 12px; margin-top: 20px}
         #drawings img{margin-bottom: 6px; width: 100%}
         #drawings img:hover{transform: scale(125%)}
         @media only screen and (min-width: 500px){
             #drawings{column-count: 2;}}
-        @media only screen and (max-width: 600px) {
-            body{background-color: #d4d4d4;
-            background-image:none}
-            .main{background-image:url(background.jpg);
-                background-attachment: fixed;
-                box-shadow: #40404080 0 0 8px}
-        }
         </style>
     </head>
 
@@ -53,7 +36,8 @@
             <img src="peopleheader.gif" alt="{people}" style="height: min(20vw, 5.5rem)"><br><br>
     
         <details class="navbar">
-            <summary><a href="/website/doodles">back to doodles</a></summary>
+            <summary>back</summary>
+            <a href="/website/doodles">doodles</a><br>
             <b><i>people</i></b> . 
             <a href="ruler_and_compass">ruler and compass</a> . 
             <a href="etc">etc</a>
