--- a/doodles.html
+++ b/doodles.html
@@ -7,7 +7,8 @@
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body{background-image: url('doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;
-        font-family: 'Crimson Pro', sans-serif}
+        font-family: 'Crimson Pro', sans-serif;
+        line-height: 1; font-size: 1.125rem}
 
         .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
