--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -5,9 +5,10 @@
         <title>{etc}</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        body{background-image: url('doodles/background.jpg');
+        body{background-image: url('/website/doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;
-        font-family: 'Crimson Pro', sans-serif}
+        font-family: 'Crimson Pro', sans-serif;
+        line-height: 1; font-size: 1.125rem}
 
         .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
