--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -13,7 +13,7 @@
         .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
 
-        drawings .img{border: solid #080808 min(3px, 0.6vw)}
+        .drawings .img{border: solid #080808 min(3px, 0.6vw)}
         .header{border: solid 0px}
         #drawings{line-height:0; column-count: 1; column-gap: 12px; margin-top: 20px}
         #drawings img{margin-bottom: 6px; width: 100%}
