--- a/doodles/people.html
+++ b/doodles/people.html
@@ -8,12 +8,12 @@
         body{background-image: url('/website/doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;
         font-family: 'Crimson Pro', sans-serif;
-        line-height: 1; font-size: 1.125rem}
+        line-height: 1; font-size: 1.2rem}
 
         .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
 
-        .drawings .img{border: solid #080808 min(3px, 0.6vw)}
+        .drawings img{border: solid #080808 min(3px, 0.6vw)}
         .header{border: solid 0px}
         #drawings{line-height:0; column-count: 1; column-gap: 12px; margin-top: 20px}
         #drawings img{margin-bottom: 6px; width: 100%}
