--- a/doodles/people.html
+++ b/doodles/people.html
@@ -34,7 +34,7 @@
         </div>
         <div class="main">
             
-            <img src="peopleheader.gif" alt="{people}" style="height: min(20vw, 5.5rem)"><br><br>
+            <img src="peopleheader.gif" alt="{people}" style="height: min(20vw, 5.5rem)"><br>
     
         <details class="navbar">
             <summary>back</summary>
