--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -19,6 +19,12 @@
         #drawings img:hover{transform: scale(125%)}
         @media only screen and (min-width: 300px){
             #drawings{column-count: 2;}}
+        @media only screen and (max-width: 800px) {
+            body{width: min(calc(100vw - 32px), 35rem); 
+            display: block;
+            padding: 16px 0;
+            margin: 0 auto;
+            min-height: 100vh}}
         </style>
     </head>
 
