--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -24,7 +24,16 @@
             display: block;
             padding: 16px 0;
             margin: 0 auto;
-            min-height: 100vh}}
+            min-height: 100vh}
+
+            .sidebar{display: none}
+
+            .navbar{display:inline-block;
+                width: 100%; border-bottom: solid var(--light-gray) 2px; padding-bottom: 10px}
+
+            .main{padding: 0 8px; margin: 0; 
+            min-height: calc(100vh - 32px);}
+        }
         </style>
     </head>
 
