--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -19,12 +19,22 @@
         #drawings img:hover{transform: scale(125%)}
         @media only screen and (min-width: 300px){
             #drawings{column-count: 2;}}
+            .sidebar div{margin: 24px}
         @media only screen and (max-width: 800px) {
             body{width: min(calc(100vw - 32px), 35rem); 
             display: block;
             padding: 16px 0;
             margin: 0 auto;
-            min-height: 100vh}}
+            min-height: 100vh}
+
+            .sidebar{display: none}
+
+            .navbar{display:inline-block;
+                width: 100%; border-bottom: solid var(--light-gray) 2px; padding-bottom: 10px}
+
+            .main{padding: 0 8px; margin: 0; 
+            min-height: calc(100vh - 32px);}
+        }
         </style>
     </head>
 
