--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -30,7 +30,7 @@
             .sidebar{display: none}
 
             .navbar{display:inline-block;
-                width: 100%; border-bottom: solid var(--light-gray) 2px; padding-bottom: 10px}
+                width: 100%; border-bottom: solid #101010 2px; padding-bottom: 10px}
 
             .main{padding: 0 8px; margin: 0; 
             min-height: calc(100vh - 32px);}
