--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li><a href="musicians" title="good music people"                   >musicians</a></li>
                 <li><a href="websites"  title="cool websites"       class="websites">websites</a></li>
                 <li><a href="words"     title="poems and texts and things"          >words</a></li>
-                <li><a href="doodles"   title="stuff i drew"                        ><s>doodles</s></a></li>
+                <li><a href="doodles"   title="stuff i drew"                        >doodles</a></li>
                 <li><a href="blender"   title="3d renders in blender"               ><s>blender</s></a></li>
                 <li><a href="misc"      title="general miscellanea" class="misc"    ><s>misc</s></a></li>
                 <li><a href="buttons"   title="other folks' sites"  class="buttons" ><s>buttons</s></a></li>
