changed other blender pages

--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <title>blender: pyramids</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        body {background-color: #000429;color: #ddba39;}
-        a{color: #ddba39}
-        a:hover{color: #000429; background-color: #ddba39; text-decoration-color: #ddba39;}
-        .page{border-color: #ddba39}
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         #images{line-height:0; column-count: 2; column-gap: 12px; margin-top: 20px}
         #images img{width: 100%; margin-top: 12px}
-        .sidebar{background-color: #161d41}
         @media only screen and (max-width: 500px) {
             #images{column-count: 1;}
-        }
-        @media only screen and (max-width: 600px) {
-            body{background-color: #161d41}
-            .main{background-color: #000429}
         }
         </style>
     </head>
