changed mobile navigation in blender pages

--- a/blender/buttons.html
+++ b/blender/buttons.html
@@ -28,7 +28,8 @@
     <h1>buttons</h1>
     
         <details class="navbar">
-            <summary><a href="/website/blender">back to blender</a></summary>
+            <summary>back</summary>
+            <a href="/website/blender">blender</a><br>
                 <a href="pyramids">pyramids</a> . 
                 <b>buttons</b> . 
                 <a href="cmyk">cmyk</a>
