--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -29,7 +29,8 @@
     <h1>pyramids</h1>
     
         <details class="navbar">
-            <summary><a href="/website/blender">back to blender</a></summary>
+            <summary>back</summary>
+            <a href="/website/blender">blender</a><br>
                 <b>pyramids</b> . 
                 <a href="buttons">buttons</a> . 
                 <a href="cmyk">cmyk</a>
