--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -28,7 +28,8 @@
     <h1>cmyk</h1>
     
         <details class="navbar">
-            <summary><a href="/website/blender">back to blender</a></summary>
+            <summary>back</summary>
+            <a href="/website/blender">blender</a><br>
                 <a href="pyramids">pyramids</a> . 
                 <a href="buttons">buttons</a> . 
                 <b>cmyk</b>
