--- a/buttons.html
+++ b/buttons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;1,650&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>buttons</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -10,13 +10,15 @@
                 --black: #101010;
                 background-color: var(--light-blue);
                 color: var(--black);
-                font-family: 'Literata', serif;}
+                font-family: 'Crimson Pro', sans-serif;
+                line-height: 1; font-size: 1.2rem}
 
-            a, .sidebar, .navbar{border-color: var(--dark-blue);}
+            .sidebar, .navbar{border-color: var(--dark-blue);}
 
             h1{font-style: italic;}
             h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
             h2::before{content: "- "; color: var(--dark-blue);}
+            a{color: var(--dark-blue); text-decoration-color: var(--dark-blue);}
             a:hover{text-decoration-color:var(--dark-blue); background-color: var(--dark-blue); color: var(--light-blue)}
             a.button:hover{background-color: #00000000; text-decoration-color: #00000000}</style>
     </head>
