changed dark blue color

--- a/buttons.html
+++ b/buttons.html
@@ -6,7 +6,7 @@
         <title>buttons</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{--light-blue: #b8cadf;
-                --dark-blue: #466ea0;
+                --dark-blue: #003473;
                 --black: #101010;
                 background-color: var(--light-blue);
                 color: var(--black);
